--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,6 +31,8 @@
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
     "eslint-plugin-storybook": "^0.11.3",
+    "postcss": "^8.5.3",
+    "postcss-nesting": "^13.0.1",
     "prettier": "^3.5.0",
     "storybook": "8.5.8",
     "typescript": "5.7.3"
