--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,10 +29,12 @@
     "@types/node": "^20.0.0",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.0",
     "eslint-plugin-storybook": "^0.11.3",
     "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1",
+    "postcss-preset-env": "^10.1.4",
     "prettier": "^3.5.0",
     "storybook": "8.5.8",
     "typescript": "5.7.3"
