--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/themes": "^3.2.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
