--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/themes": "^3.2.0",
     "@repo/ui": "workspace:*",
+    "@repo/auth": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
