--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^3.2.0",
     "@repo/ui": "workspace:*",
     "@repo/auth": "workspace:*",
+    "@repo/api": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
