--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -45,8 +45,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-query": "^3.39.3",
-    "@repo/ui": "workspace:*"
+    "@repo/ui": "workspace:*",
+    "@repo/api": "workspace:*"
   },
   "sideEffects": [
     "**/*.css"
