--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -1,20 +1,19 @@
 {
   "name": "quest4kids",
   "version": "0.1.0",
-  "type": "module",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3000",
     "build": "next build",
-    "start": "next start",
+    "check-types": "tsc --noEmit",
+    "dev": "next dev --turbopack --port 3000",
     "lint": "next lint --max-warnings 0",
-    "check-types": "tsc --noEmit"
+    "start": "next start"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.0",
-    "@repo/ui": "workspace:*",
-    "@repo/auth": "workspace:*",
     "@repo/api": "workspace:*",
+    "@repo/auth": "workspace:*",
+    "@repo/ui": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -28,6 +27,7 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
-    "typescript": "5.7.3"
-  }
+    "typescript": "^5.7.3"
+  },
+  "type": "module"
 }
