--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-	"name": "my-turbo-repo",
-	"private": true,
-	"scripts": {
-		"build": "turbo run build",
-		"dev": "turbo run dev",
-		"lint": "turbo run lint",
-		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
-		"check-types": "turbo run check-types"
-	},
-	"devDependencies": {
-		"prettier": "^3.5.0",
-		"turbo": "^2.4.0",
-		"typescript": "5.7.3"
-	},
-	"packageManager": "pnpm@9.0.0",
-	"engines": {
-		"node": ">=18"
-	}
+  "name": "my-turbo-repo",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "check-types": "turbo run check-types",
+    "dev": "turbo run dev",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "lint": "turbo run lint",
+    "postinstall": "pnpm syncpack list-mismatches && pnpm syncpack format",
+    "preinstall": "pnpm syncpack list-mismatches || (echo 'Version mismatch detected!' && exit 1)",
+    "prepare": "husky",
+    "syncpack-check": "pnpm syncpack list-mismatches"
+  },
+  "devDependencies": {
+    "husky": "^8.0.0",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.0",
+    "syncpack": "^13.0.2",
+    "turbo": "^2.4.0",
+    "typescript": "^5.7.3"
+  },
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "pnpm@9.0.0"
 }
