--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "@repo/typescript-config/react-library.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "paths": {
-      "utils": ["../utils/src"]
-    }
+    "outDir": "dist"
   },
   "include": ["src", "global.d.ts"],
   "exclude": ["node_modules", "dist"]
