--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,13 +1,7 @@
 {
   "name": "@repo/eslint-config",
   "version": "0.0.0",
-  "type": "module",
   "private": true,
-  "exports": {
-    "./base": "./base.js",
-    "./next-js": "./next.js",
-    "./react-internal": "./react-internal.js"
-  },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@next/eslint-plugin-next": "^15.1.6",
@@ -20,5 +14,11 @@
     "globals": "^15.15.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
-  }
+  },
+  "exports": {
+    "./base": "./base.js",
+    "./next-js": "./next.js",
+    "./react-internal": "./react-internal.js"
+  },
+  "type": "module"
 }
