--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,16 +2,21 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "private": true,
-  "exports": {
-    "./globals.css": "./src/globals.css",
-    ".": "./src/index.ts"
-  },
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
-    "generate:component": "turbo gen react-component",
+    "build-storybook": "storybook build",
     "check-types": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "generate:component": "turbo gen react-component",
+    "lint": "eslint . --max-warnings 0",
+    "storybook": "storybook dev -p 6006"
+  },
+  "dependencies": {
+    "@radix-ui/themes": "^3.2.0",
+    "clsx": "^2.1.1",
+    "next": "^15.1.6",
+    "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.4",
@@ -26,7 +31,7 @@
     "@storybook/react": "8.5.8",
     "@storybook/test": "8.5.8",
     "@turbo/gen": "^2.4.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "autoprefixer": "^10.4.20",
@@ -37,23 +42,18 @@
     "postcss-preset-env": "^10.1.4",
     "prettier": "^3.5.0",
     "storybook": "8.5.8",
-    "typescript": "5.7.3"
+    "typescript": "^5.7.3"
   },
-  "dependencies": {
-    "@radix-ui/themes": "^3.2.0",
-    "clsx": "^2.1.1",
-    "next": "^15.1.6",
-    "next-themes": "^0.4.4",
-    "radix-ui": "^1.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "sideEffects": [
-    "**/*.css"
-  ],
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
     ]
-  }
+  },
+  "exports": {
+    "./globals.css": "./src/globals.css",
+    ".": "./src/index.ts"
+  },
+  "sideEffects": [
+    "**/*.css"
+  ]
 }
