Q4K: Update package.json and other configurations, add process.env.NEXT_PUBLIC_API_URL

--- a/apps/quest4Kids/tsconfig.json
+++ b/apps/quest4Kids/tsconfig.json
@@ -10,9 +10,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
-      "@/core/*": ["./src/core/*"],
-      "@/services/*": ["./src/services/*"],
-      "@/utils/*": ["./src/utils/*"]
+      "@/core/*": ["./src/core/*"]
     }
   },
   "include": [
