--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,14 +8,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.9",
-    "@types/react": "19.0.8",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22",
+    "@types/react": "19.0.8",
     "eslint": "^9.20.0",
     "prettier": "^3.5.0",
     "typescript": "^5.7.3"
