--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -3,11 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build-storybook": "storybook build",
     "check-types": "tsc --noEmit",
-    "generate:component": "turbo gen react-component",
-    "lint": "eslint . --max-warnings 0",
-    "storybook": "storybook dev -p 6006"
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.0",
@@ -19,38 +16,21 @@
     "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "3.2.4",
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@storybook/addon-essentials": "8.5.8",
-    "@storybook/addon-interactions": "8.5.8",
-    "@storybook/addon-onboarding": "8.5.8",
-    "@storybook/blocks": "8.5.8",
-    "@storybook/nextjs": "8.5.8",
-    "@storybook/react": "8.5.8",
-    "@storybook/test": "8.5.8",
-    "@turbo/gen": "^2.4.0",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.20.0",
-    "eslint-plugin-storybook": "^0.11.3",
     "postcss": "^8.5.3",
     "postcss-nesting": "^13.0.1",
     "postcss-preset-env": "^10.1.4",
     "prettier": "^3.5.0",
-    "storybook": "8.5.8",
     "typescript": "^5.7.3"
   },
-  "eslintConfig": {
-    "extends": [
-      "plugin:storybook/recommended"
-    ]
-  },
   "exports": {
-    "./globals.css": "./src/globals.css",
     ".": "./src/index.ts"
   },
   "sideEffects": [
