--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -10,15 +10,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.2",
     "@radix-ui/themes": "^3.2.0",
     "@repo/api": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/ui": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
+    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
