--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
+    "next": "^15.1.6",
     "react": "^19.0.0"
   },
   "devDependencies": {
