--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -15,6 +15,7 @@
     "@repo/api": "workspace:*",
     "@repo/auth": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
