--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -7,7 +7,7 @@
     "check-types": "tsc --noEmit",
     "dev": "next dev --turbopack --port 3000",
     "lint": "next lint --max-warnings 0",
-    "start": "next start"
+    "start": "next start --port 3002"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
