--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -17,6 +17,7 @@
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
     "next": "^15.1.6",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
