--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,6 +11,7 @@
     "@repo/api": "workspace:*",
     "@repo/ui": "workspace:*",
     "next": "^15.1.6",
+    "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2"
@@ -19,6 +20,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
@@ -29,6 +31,11 @@
     "postcss-preset-env": "^10.1.4",
     "prettier": "^3.5.0",
     "typescript": "^5.7.3"
+  },
+  "peerDependencies": {
+    "next": "^15.1.6",
+    "next-auth": "5.0.0-beta.25",
+    "react": "^19.0.0"
   },
   "exports": {
     ".": "./src/index.ts"
