--- a/turbo.json
+++ b/turbo.json
@@ -20,6 +20,6 @@
 		}
 	},
 
-	"globalEnv": ["NEXT_PUBLIC_API_URL", "REACT_APP_API_URL", "API_URL"],
+	"globalEnv": ["NEXT_PUBLIC_API_URL", "REACT_APP_API_URL", "API_URL", "NEXTAUTH_SECRET"],
 	"globalDependencies": [".env"]
 }
