--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -10,7 +10,9 @@
     "@radix-ui/themes": "^3.2.0",
     "@repo/api": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/utils": "workspace:*",
     "next": "^15.1.6",
+    "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2"
