--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@repo/auth": "workspace:*",
+    "@repo/utils": "workspace:*",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "zod": "^3.24.2"
