--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.0",
+    "@repo/utils": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.1.3",
