--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -18,6 +18,7 @@
     "@repo/utils": "workspace:*",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.1",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
