--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -16,11 +16,13 @@
     "@repo/auth": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
+    "chart.js": "^4.4.8",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.1",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "yup": "^1.6.1"
