--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -16,6 +16,7 @@
     "@repo/auth": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
@@ -32,6 +33,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
