--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -13,8 +13,7 @@
     "next": "^15.1.6",
     "next-auth": "5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
