--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -10,20 +10,30 @@
     "start": "next start --port 3002"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/themes": "^3.2.0",
     "@repo/api": "workspace:*",
     "@repo/auth": "workspace:*",
+    "@repo/clerk": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.17",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.484.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.1",
+    "postcss": "^8.5.3",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.17",
+    "tw-animate-css": "^1.2.5",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
