--- a/packages/uiTw/package.json
+++ b/packages/uiTw/package.json
@@ -1,53 +1,47 @@
 {
-  "name": "quest4kids",
-  "version": "0.1.0",
+  "name": "@repo/ui-tw",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build-storybook": "storybook build",
     "check-types": "tsc --noEmit",
-    "dev": "next dev --port 3000 --turbopack",
-    "lint": "next lint --max-warnings 0",
-    "start": "next start --port 3002"
+    "generate:component": "turbo gen react-component",
+    "lint": "eslint . --max-warnings 0",
+    "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/themes": "^3.2.0",
-    "@repo/api": "workspace:*",
-    "@repo/auth": "workspace:*",
-    "@repo/clerk": "workspace:*",
-    "@repo/ui": "workspace:*",
-    "@repo/ui-tw": "workspace:*",
     "@repo/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.17",
-    "canvas-confetti": "^1.9.3",
-    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
     "next": "^15.1.6",
-    "next-themes": "^0.4.4",
-    "nuqs": "^2.4.1",
     "postcss": "^8.5.3",
-    "radix-ui": "^1.1.3",
     "react": "^19.0.0",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
-    "tw-animate-css": "^1.2.5",
-    "yup": "^1.6.1",
-    "zod": "^3.24.2"
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/prettier-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/canvas-confetti": "^1.9.0",
+    "@turbo/gen": "^2.4.0",
     "@types/node": "^22",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.20.0",
+    "prettier": "^3.5.0",
     "typescript": "^5.7.3"
   },
-  "type": "module"
+  "exports": {
+    "./styles/*": "./src/styles/*",
+    ".": "./src/index.ts"
+  },
+  "sideEffects": [
+    "**/*.css"
+  ]
 }
