--- a/packages/uiTw/package.json
+++ b/packages/uiTw/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.17",
     "class-variance-authority": "^0.7.1",
