--- a/packages/uiTw/package.json
+++ b/packages/uiTw/package.json
@@ -10,6 +10,7 @@
     "storybook": "storybook dev -p 6006"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@repo/ui": "workspace:*",
     "@repo/utils": "workspace:*",
