--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -18,6 +18,7 @@
     "@repo/ui-tw": "workspace:*",
     "@repo/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.17",
+    "@types/react-grid-layout": "^1.3.5",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "next": "^15.1.6",
@@ -28,6 +29,8 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-grid-layout": "^1.5.1",
+    "react-resizable": "^3.0.5",
     "tailwindcss": "^4.0.17",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
