--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,9 @@
 		"dev": {
 			"cache": false,
 			"persistent": true
+		},
+		"clean": {
+			"outputs": [".next/**", "dist/**", "build/**", "node_modules/**"]
 		}
 	},
 
