--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
+		"start": "pnpm --filter quest4kids start",
+		"check-types": "turbo run check-types",
 		"clean": "turbo clean && rm -rf node_modules && pnpm store prune",
 		"clean:node_modules": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +",
-		"check-types": "turbo run check-types",
 		"dev": "turbo run dev",
 		"format": "prettier --write \"**/*.{ts,tsx,md}\"",
 		"lint": "turbo run lint",
@@ -18,6 +19,7 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^15.4.3",
 		"prettier": "^3.5.0",
+		"rimraf": "^6.0.1",
 		"syncpack": "^13.0.2",
 		"turbo": "^2.4.0",
 		"typescript": "^5.7.3"
