--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@repo/auth": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@tanstack/react-query": "^5.72.1",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "zod": "^3.24.2"
