--- a/apps/quest4Kids/tsconfig.json
+++ b/apps/quest4Kids/tsconfig.json
@@ -10,7 +10,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
-      "@/core/*": ["./src/core/*"]
+      "@/core/*": ["./src/core/*"],
+      "@/lib/utils": ["./src/lib/utils"]
     }
   },
   "include": [
