--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -18,6 +18,7 @@
     "@repo/ui-tw": "workspace:*",
     "@repo/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.17",
+    "@tanstack/react-query": "^5.72.1",
     "@types/react-grid-layout": "^1.3.5",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
