--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -33,6 +33,7 @@
     "react-grid-layout": "^1.5.1",
     "react-hook-form": "^7.55.0",
     "react-resizable": "^3.0.5",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.17",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
