--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -36,7 +36,8 @@
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.17",
     "yup": "^1.6.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
