--- a/packages/uiTw/package.json
+++ b/packages/uiTw/package.json
@@ -29,10 +29,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.484.0",
     "next": "^15.1.6",
+    "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.17",
     "tw-animate-css": "^1.2.5",
