--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "zod": "^3.24.2"
   },
   "author": "",
