--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^3.2.0",
     "@repo/api": "workspace:*",
     "@repo/auth": "workspace:*",
+    "@repo/chat": "workspace:*",
     "@repo/ui": "workspace:*",
     "@repo/ui-tw": "workspace:*",
     "@repo/utils": "workspace:*",
