--- a/packages/uiTw/package.json
+++ b/packages/uiTw/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.484.0",
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.4.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
