--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -20,6 +20,7 @@
     "@repo/utils": "workspace:*",
     "@tailwindcss/postcss": "^4.0.17",
     "@tanstack/react-query": "^5.72.1",
+    "@tanstack/react-table": "^8.21.2",
     "@types/react-grid-layout": "^1.3.5",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
