--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -27,6 +27,7 @@
     "next": "^15.1.6",
     "next-themes": "^0.4.4",
     "nuqs": "^2.4.1",
+    "openai": "^4.103.0",
     "postcss": "^8.5.3",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
@@ -35,6 +36,7 @@
     "react-grid-layout": "^1.5.1",
     "react-hook-form": "^7.55.0",
     "react-resizable": "^3.0.5",
+    "smart-webcomponents-react": "^23.1.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.17",
     "yup": "^1.6.1",
