--- a/turbo.json
+++ b/turbo.json
@@ -23,6 +23,6 @@
 		}
 	},
 
-	"globalEnv": ["NEXT_PUBLIC_API_URL", "REACT_APP_API_URL", "API_URL"],
+	"globalEnv": ["NEXT_PUBLIC_API_URL", "REACT_APP_API_URL", "API_URL", "OPENAI_API_KEY"],
 	"globalDependencies": [".env"]
 }
