--- a/apps/quest4Kids/package.json
+++ b/apps/quest4Kids/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/themes": "^3.2.0",
     "@repo/api": "workspace:*",
     "@repo/auth": "workspace:*",
